2008-05-10  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Yay, |canvas| got the final status!

2008-05-10  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm ($GetHTMLBooleanAttrChecker): Allow uppercase
	letters (HTML5 revision 1572).

2008-05-06  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Invoke |Whatpm::HTMLTable->assign_header| for each
	table object.  Return the table object, not table element.
	The |headers=""| checker for |td| elements are now noop.
	Set the status of |headers=""| attribute as HTML5's one.

2008-05-05  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm ($HTMLLengthAttrChecker): New.
	(table/@cellpadding, table/@cellspacing, @charoff): Implemented.
	(script/@langauge): Implemented.

2008-05-05  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Make duplicate http-equiv="" non-conforming.
	Check meta refresh content="".

2008-05-05  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Empty <tbod>, <thead>, <tfoot>, and <tr> are
	no longer content model error (they might be raise
	table model error, however).  All table model error
	parameters should propagate.

2008-05-05  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Raise an error if a repeat* global attrbute
	is used for an HTML element.

2008-05-03  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Support for global attributes.  Status
	for XHTML2 elements/attributes are added.

2008-05-03  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Support for |repeat-start=""| attribute.

2008-05-03  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Support for |repeat=""|, |repeat-template=""|,
	|repeat-min=""|, and |repeat-max=""| attributes.
	Support for |button| |type| values |add|, |remove|, |move-up|,
	and |move-down|.

2008-05-03  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Support for |template=""|, |ref=""|, and
	|registrationmark=""| attributes.

2008-04-29  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: <font> dropped and style="" is now global (HTML5 revision
	1511).

2008-04-29  Wakaba  <wakaba@suika.fam.cx>
