@@ -1,7 +1,7 @@
 1..2192
 # Running under perl version 5.008007 for linux
-# Current time local: Sat May 10 14:59:59 2008
-# Current time GMT:   Sat May 10 05:59:59 2008
+# Current time local: Fri May 16 19:50:26 2008
+# Current time GMT:   Fri May 16 10:50:26 2008
 # Using Test.pm version 1.25
 # t/content-model-1.dat
 ok 1
@@ -1789,9 +1789,7 @@ ok 1702
 ok 1703
 ok 1704
 ok 1705
-not ok 1706
-# Test 1706 got: "/map/@name;attribute not defined;m\n/map/@name;attribute;unsupported\n/map;attribute missing:id\n/map;no significant content;s" (t/ContentChecker.t at line 99 fail #1706)
-#      Expected: "/map/@name;attribute;unsupported\n/map;attribute missing:id\n/map;no significant content;s" (<map name="aa" xmlns="http://www.w3.org/1999/xhtml"/>)
+ok 1706
 ok 1707
 ok 1708
 ok 1709
@@ -1805,7 +1803,9 @@ ok 1716
 ok 1717
 ok 1718
 ok 1719
-ok 1720
+not ok 1720
+# Test 1720 got: "/map/@name;attribute not defined;m\n/map/@name;attribute;unsupported\n/map;attribute missing:id\n/map;no significant content;s" (t/ContentChecker.t at line 99 fail #1720)
+#      Expected: "/map/@name;attribute;unsupported\n/map;attribute missing:id\n/map;no significant content;s" (<map name="aa" xmlns="http://www.w3.org/1999/xhtml"/>)
 ok 1721
 ok 1722
 ok 1723
@@ -1877,9 +1877,7 @@ ok 1788
 ok 1789
 ok 1790
 ok 1791
-not ok 1792
-# Test 1792 got: "/area/@rev;attribute not defined;m\n/area/@rev;attribute;unsupported" (t/ContentChecker.t at line 99 fail #1792)
-#      Expected: "/area/@rev;attribute not defined;m" (<area shape="default" rev="" xmlns="http://www.w3.org/1999/xhtml"/>)
+ok 1792
 ok 1793
 ok 1794
 ok 1795
@@ -1887,17 +1885,15 @@ ok 1796
 ok 1797
 ok 1798
 ok 1799
-not ok 1800
-# Test 1800 got: "/table/@border;attribute not defined;m\n/table/@border;attribute;unsupported" (t/ContentChecker.t at line 99 fail #1800)
-#      Expected: "/table/@border;attribute not defined;m\n/table/@border;nninteger:syntax error" (<table border="" xmlns="http://www.w3.org/1999/xhtml"/>)
-not ok 1801
-# Test 1801 got: "/table/@border;attribute not defined;m\n/table/@border;attribute;unsupported" (t/ContentChecker.t at line 99 fail #1801)
-#      Expected: "/table/@border;attribute not defined;m" (<table border="1" xmlns="http://www.w3.org/1999/xhtml"/>)
+ok 1800
+ok 1801
 ok 1802
 ok 1803
 ok 1804
 ok 1805
-ok 1806
+not ok 1806
+# Test 1806 got: "/area/@rev;attribute not defined;m\n/area/@rev;attribute;unsupported" (t/ContentChecker.t at line 99 fail #1806)
+#      Expected: "/area/@rev;attribute not defined;m" (<area shape="default" rev="" xmlns="http://www.w3.org/1999/xhtml"/>)
 ok 1807
 ok 1808
 ok 1809
@@ -1905,8 +1901,12 @@ ok 1810
 ok 1811
 ok 1812
 ok 1813
-ok 1814
-ok 1815
+not ok 1814
+# Test 1814 got: "/table/@border;attribute not defined;m\n/table/@border;attribute;unsupported" (t/ContentChecker.t at line 99 fail #1814)
+#      Expected: "/table/@border;attribute not defined;m\n/table/@border;nninteger:syntax error" (<table border="" xmlns="http://www.w3.org/1999/xhtml"/>)
+not ok 1815
+# Test 1815 got: "/table/@border;attribute not defined;m\n/table/@border;attribute;unsupported" (t/ContentChecker.t at line 99 fail #1815)
+#      Expected: "/table/@border;attribute not defined;m" (<table border="1" xmlns="http://www.w3.org/1999/xhtml"/>)
 ok 1816
 ok 1817
 ok 1818
@@ -2258,12 +2258,8 @@ ok 2163
 ok 2164
 ok 2165
 ok 2166
-not ok 2167
-# Test 2167 got: "/select/@accesskey;char:syntax error;m\n/select;no significant content;s" (t/ContentChecker.t at line 99 fail #2167)
-#      Expected: "/select/@accesskey;char:syntax error;m" (<select accesskey="" xmlns="http://www.w3.org/1999/xhtml"/>)
-not ok 2168
-# Test 2168 got: "/select;no significant content;s" (t/ContentChecker.t at line 99 fail #2168)
-#      Expected: "" (<select accesskey="x" xmlns="http://www.w3.org/1999/xhtml"/>)
+ok 2167
+ok 2168
 ok 2169
 ok 2170
 ok 2171
@@ -2276,8 +2272,12 @@ ok 2177
 ok 2178
 ok 2179
 ok 2180
-ok 2181
-ok 2182
+not ok 2181
+# Test 2181 got: "/select/@accesskey;char:syntax error;m\n/select;no significant content;s" (t/ContentChecker.t at line 99 fail #2181)
+#      Expected: "/select/@accesskey;char:syntax error;m" (<select accesskey="" xmlns="http://www.w3.org/1999/xhtml"/>)
+not ok 2182
+# Test 2182 got: "/select;no significant content;s" (t/ContentChecker.t at line 99 fail #2182)
+#      Expected: "" (<select accesskey="x" xmlns="http://www.w3.org/1999/xhtml"/>)
 ok 2183
 ok 2184
 ok 2185
@@ -2289,62 +2289,62 @@ ok 2190
 ok 2191
 ok 2192
 ok 2193
-not ok 2194
-# Test 2194 got: "/input/@type;attribute not defined;m" (t/ContentChecker.t at line 99 fail #2194)
+ok 2194
+ok 2195
+ok 2196
+ok 2197
+ok 2198
+ok 2199
+ok 2200
+ok 2201
+ok 2202
+ok 2203
+ok 2204
+ok 2205
+ok 2206
+ok 2207
+not ok 2208
+# Test 2208 got: "/input/@type;attribute not defined;m" (t/ContentChecker.t at line 99 fail #2208)
 #      Expected: "" (<input type="add" xmlns="http://www.w3.org/1999/xhtml"/>)
-not ok 2195
-# Test 2195 got: "/button/@type;attribute not defined;m" (t/ContentChecker.t at line 99 fail #2195)
+not ok 2209
+# Test 2209 got: "/button/@type;attribute not defined;m" (t/ContentChecker.t at line 99 fail #2209)
 #      Expected: "" (<button type="add" xmlns="http://www.w3.org/1999/xhtml">x</button>)
-not ok 2196
-# Test 2196 got: "/input/@type;attribute not defined;m" (t/ContentChecker.t at line 99 fail #2196)
+not ok 2210
+# Test 2210 got: "/input/@type;attribute not defined;m" (t/ContentChecker.t at line 99 fail #2210)
 #      Expected: "" (<input type="remove" xmlns="http://www.w3.org/1999/xhtml"/>)
-not ok 2197
-# Test 2197 got: "/input/@type;attribute not defined;m\n/input/@type;enumerated:invalid" (t/ContentChecker.t at line 99 fail #2197)
+not ok 2211
+# Test 2211 got: "/input/@type;attribute not defined;m\n/input/@type;enumerated:invalid" (t/ContentChecker.t at line 99 fail #2211)
 #      Expected: "/input/@type;enumerated:invalid" (<input type="delete" xmlns="http://www.w3.org/1999/xhtml"/>)
-not ok 2198
-# Test 2198 got: "/button/@type;attribute not defined;m" (t/ContentChecker.t at line 99 fail #2198)
+not ok 2212
+# Test 2212 got: "/button/@type;attribute not defined;m" (t/ContentChecker.t at line 99 fail #2212)
 #      Expected: "" (<button type="remove" xmlns="http://www.w3.org/1999/xhtml">x</button>)
-not ok 2199
-# Test 2199 got: "/button/@type;attribute not defined;m\n/button/@type;enumerated:invalid" (t/ContentChecker.t at line 99 fail #2199)
+not ok 2213
+# Test 2213 got: "/button/@type;attribute not defined;m\n/button/@type;enumerated:invalid" (t/ContentChecker.t at line 99 fail #2213)
 #      Expected: "/button/@type;enumerated:invalid" (<button type="delete" xmlns="http://www.w3.org/1999/xhtml">x</button>)
-not ok 2200
-# Test 2200 got: "/input/@type;attribute not defined;m" (t/ContentChecker.t at line 99 fail #2200)
+not ok 2214
+# Test 2214 got: "/input/@type;attribute not defined;m" (t/ContentChecker.t at line 99 fail #2214)
 #      Expected: "" (<input type="move-up" xmlns="http://www.w3.org/1999/xhtml"/>)
-not ok 2201
-# Test 2201 got: "/button/@type;attribute not defined;m" (t/ContentChecker.t at line 99 fail #2201)
+not ok 2215
+# Test 2215 got: "/button/@type;attribute not defined;m" (t/ContentChecker.t at line 99 fail #2215)
 #      Expected: "" (<button type="move-up" xmlns="http://www.w3.org/1999/xhtml">x</button>)
-not ok 2202
-# Test 2202 got: "/input/@type;attribute not defined;m" (t/ContentChecker.t at line 99 fail #2202)
+not ok 2216
+# Test 2216 got: "/input/@type;attribute not defined;m" (t/ContentChecker.t at line 99 fail #2216)
 #      Expected: "" (<input type="move-down" xmlns="http://www.w3.org/1999/xhtml"/>)
-not ok 2203
-# Test 2203 got: "/button/@type;attribute not defined;m" (t/ContentChecker.t at line 99 fail #2203)
+not ok 2217
+# Test 2217 got: "/button/@type;attribute not defined;m" (t/ContentChecker.t at line 99 fail #2217)
 #      Expected: "" (<button type="move-down" xmlns="http://www.w3.org/1999/xhtml">x</button>)
-not ok 2204
-# Test 2204 got: "/div/input/@type;attribute not defined;m\n/div/input;element not allowed:flow;m" (t/ContentChecker.t at line 99 fail #2204)
+not ok 2218
+# Test 2218 got: "/div/input/@type;attribute not defined;m\n/div/input;element not allowed:flow;m" (t/ContentChecker.t at line 99 fail #2218)
 #      Expected: "" (<div xmlns="http://www.w3.org/1999/xhtml">
 #<input type="add" template="t"/>
 #<p repeat="template" id="t">x</p>
 #</div>)
-not ok 2205
-# Test 2205 got: "/div/button/@type;attribute not defined;m\n/div/button;element not allowed:flow;m" (t/ContentChecker.t at line 99 fail #2205)
+not ok 2219
+# Test 2219 got: "/div/button/@type;attribute not defined;m\n/div/button;element not allowed:flow;m" (t/ContentChecker.t at line 99 fail #2219)
 #      Expected: "" (<div xmlns="http://www.w3.org/1999/xhtml">
 #<button type="add" template="t">x</button>
 #<p repeat="template" id="t">x</p>
 #</div>)
-ok 2206
-ok 2207
-ok 2208
-ok 2209
-ok 2210
-ok 2211
-ok 2212
-ok 2213
-ok 2214
-ok 2215
-ok 2216
-ok 2217
-ok 2218
-ok 2219
 ok 2220
 ok 2221
 ok 2222
@@ -2359,38 +2359,36 @@ ok 2230
 ok 2231
 ok 2232
 ok 2233
-not ok 2234
-# Test 2234 got: "/x/@repeat-start;nninteger:syntax error\n/x;element;unsupported" (t/ContentChecker.t at line 99 fail #2234)
-#      Expected: "/x/@repeat-start;nninteger:syntax error;m\n/x;element;unsupported" (<x html:repeat-start="x" xmlns:html="http://www.w3.org/1999/xhtml"/>)
-not ok 2235
-# Test 2235 got: "/x/@repeat-min;nninteger:syntax error\n/x;element;unsupported" (t/ContentChecker.t at line 99 fail #2235)
-#      Expected: "/x/@repeat-min;nninteger:syntax error;m\n/x;element;unsupported" (<x html:repeat-min="x" xmlns:html="http://www.w3.org/1999/xhtml"/>)
-not ok 2236
-# Test 2236 got: "/x/@repeat-max;nninteger:syntax error\n/x;element;unsupported" (t/ContentChecker.t at line 99 fail #2236)
-#      Expected: "/x/@repeat-max;nninteger:syntax error;m\n/x;element;unsupported" (<x html:repeat-max="x" xmlns:html="http://www.w3.org/1999/xhtml"/>)
+ok 2234
+ok 2235
+ok 2236
 ok 2237
 ok 2238
 ok 2239
 ok 2240
 ok 2241
 ok 2242
-# t/content-model-3.dat
 ok 2243
 ok 2244
 ok 2245
 ok 2246
 ok 2247
-ok 2248
-ok 2249
-ok 2250
+not ok 2248
+# Test 2248 got: "/x/@repeat-start;nninteger:syntax error\n/x;element;unsupported" (t/ContentChecker.t at line 99 fail #2248)
+#      Expected: "/x/@repeat-start;nninteger:syntax error;m\n/x;element;unsupported" (<x html:repeat-start="x" xmlns:html="http://www.w3.org/1999/xhtml"/>)
+not ok 2249
+# Test 2249 got: "/x/@repeat-min;nninteger:syntax error\n/x;element;unsupported" (t/ContentChecker.t at line 99 fail #2249)
+#      Expected: "/x/@repeat-min;nninteger:syntax error;m\n/x;element;unsupported" (<x html:repeat-min="x" xmlns:html="http://www.w3.org/1999/xhtml"/>)
+not ok 2250
+# Test 2250 got: "/x/@repeat-max;nninteger:syntax error\n/x;element;unsupported" (t/ContentChecker.t at line 99 fail #2250)
+#      Expected: "/x/@repeat-max;nninteger:syntax error;m\n/x;element;unsupported" (<x html:repeat-max="x" xmlns:html="http://www.w3.org/1999/xhtml"/>)
 ok 2251
 ok 2252
-not ok 2253
-# Test 2253 got: "/a;element;unsupported" (t/ContentChecker.t at line 99 fail #2253)
-#      Expected: "/a;Reserved Prefixes and Namespace Names:<xmlns:>;NC\n/a;element;unsupported" (<xmlns:a/>)
+ok 2253
 ok 2254
 ok 2255
 ok 2256
+# t/content-model-3.dat
 ok 2257
 ok 2258
 ok 2259
@@ -2398,11 +2396,12 @@ ok 2260
 ok 2261
 ok 2262
 ok 2263
-# t/content-model-4.dat
 ok 2264
 ok 2265
 ok 2266
-ok 2267
+not ok 2267
+# Test 2267 got: "/a;element;unsupported" (t/ContentChecker.t at line 99 fail #2267)
+#      Expected: "/a;Reserved Prefixes and Namespace Names:<xmlns:>;NC\n/a;element;unsupported" (<xmlns:a/>)
 ok 2268
 ok 2269
 ok 2270
@@ -2413,6 +2412,7 @@ ok 2274
 ok 2275
 ok 2276
 ok 2277
+# t/content-model-4.dat
 ok 2278
 ok 2279
 ok 2280
@@ -2446,7 +2446,6 @@ ok 2307
 ok 2308
 ok 2309
 ok 2310
-# t/content-model-5.dat
 ok 2311
 ok 2312
 ok 2313
@@ -2461,6 +2460,7 @@ ok 2321
 ok 2322
 ok 2323
 ok 2324
+# t/content-model-5.dat
 ok 2325
 ok 2326
 ok 2327
@@ -2474,11 +2474,8 @@ ok 2334
 ok 2335
 ok 2336
 ok 2337
-# t/content-model-6.dat
 ok 2338
-not ok 2339
-# Test 2339 got: "/p/@data;attribute;unsupported\n/p;element;unsupported" (t/ContentChecker.t at line 99 fail #2339)
-#      Expected: "/p/@data;attribute not defined;m" (<p xmlns="http://ww.w3.org/1999/xhtml" data="">x</p>)
+ok 2339
 ok 2340
 ok 2341
 ok 2342
@@ -2486,14 +2483,16 @@ ok 2343
 ok 2344
 ok 2345
 ok 2346
-# t/table-1.dat
 ok 2347
 ok 2348
 ok 2349
 ok 2350
 ok 2351
+# t/content-model-6.dat
 ok 2352
-ok 2353
+not ok 2353
+# Test 2353 got: "/p/@data;attribute;unsupported\n/p;element;unsupported" (t/ContentChecker.t at line 99 fail #2353)
+#      Expected: "/p/@data;attribute not defined;m" (<p xmlns="http://ww.w3.org/1999/xhtml" data="">x</p>)
 ok 2354
 ok 2355
 ok 2356
@@ -2501,6 +2500,7 @@ ok 2357
 ok 2358
 ok 2359
 ok 2360
+# t/table-1.dat
 ok 2361
 ok 2362
 ok 2363
@@ -2509,7 +2509,6 @@ ok 2365
 ok 2366
 ok 2367
 ok 2368
-# t/content-model-atom-1.dat
 ok 2369
 ok 2370
 ok 2371
@@ -2524,6 +2523,7 @@ ok 2379
 ok 2380
 ok 2381
 ok 2382
+# t/content-model-atom-1.dat
 ok 2383
 ok 2384
 ok 2385
@@ -2556,30 +2556,11 @@ ok 2411
 ok 2412
 ok 2413
 ok 2414
-not ok 2415
-# Test 2415 got: "/entry/content/@type;IMT:subtype;unsupported\n/entry/content;atom|content not supported;u\n/entry;element missing:atom|summary;m" (t/ContentChecker.t at line 99 fail #2415)
-#      Expected: "/entry;element missing:atom|summary;m" (<entry xmlns="http://www.w3.org/2005/Atom">
-#<id>about:</id>
-#<author><name>x</name></author>
-#<link rel="alternate" href=""/>
-#<updated>2000-01-02T03:04:05Z</updated>
-#<title>x</title>
-#<content type="image/png"/>
-#</entry>)
-not ok 2416
-# Test 2416 got: "/entry/content/@type;IMT:composite;m\n/entry/content/@type;IMT:subtype;unsupported\n/entry/content;atom|content not supported;u\n/entry;element missing:atom|summary;m" (t/ContentChecker.t at line 99 fail #2416)
-#      Expected: "/entry/content/@type;IMT:composite;m\n/entry;element missing:atom|summary;m" (<entry xmlns="http://www.w3.org/2005/Atom">
-#<id>about:</id>
-#<author><name>x</name></author>
-#<link rel="alternate" href=""/>
-#<updated>2000-01-02T03:04:05Z</updated>
-#<title>x</title>
-#<content type="message/rfc822"/>
-#</entry>)
+ok 2415
+ok 2416
 ok 2417
 ok 2418
 ok 2419
-# t/content-model-atom-2.dat
 ok 2420
 ok 2421
 ok 2422
@@ -2589,11 +2570,30 @@ ok 2425
 ok 2426
 ok 2427
 ok 2428
-ok 2429
-ok 2430
+not ok 2429
+# Test 2429 got: "/entry/content/@type;IMT:subtype;unsupported\n/entry/content;atom|content not supported;u\n/entry;element missing:atom|summary;m" (t/ContentChecker.t at line 99 fail #2429)
+#      Expected: "/entry;element missing:atom|summary;m" (<entry xmlns="http://www.w3.org/2005/Atom">
+#<id>about:</id>
+#<author><name>x</name></author>
+#<link rel="alternate" href=""/>
+#<updated>2000-01-02T03:04:05Z</updated>
+#<title>x</title>
+#<content type="image/png"/>
+#</entry>)
+not ok 2430
+# Test 2430 got: "/entry/content/@type;IMT:composite;m\n/entry/content/@type;IMT:subtype;unsupported\n/entry/content;atom|content not supported;u\n/entry;element missing:atom|summary;m" (t/ContentChecker.t at line 99 fail #2430)
+#      Expected: "/entry/content/@type;IMT:composite;m\n/entry;element missing:atom|summary;m" (<entry xmlns="http://www.w3.org/2005/Atom">
+#<id>about:</id>
+#<author><name>x</name></author>
+#<link rel="alternate" href=""/>
+#<updated>2000-01-02T03:04:05Z</updated>
+#<title>x</title>
+#<content type="message/rfc822"/>
+#</entry>)
 ok 2431
 ok 2432
 ok 2433
+# t/content-model-atom-2.dat
 ok 2434
 ok 2435
 ok 2436
@@ -2604,9 +2604,23 @@ ok 2440
 ok 2441
 ok 2442
 ok 2443
+ok 2444
+ok 2445
+ok 2446
+ok 2447
+ok 2448
+ok 2449
+ok 2450
+ok 2451
+ok 2452
+ok 2453
+ok 2454
+ok 2455
+ok 2456
+ok 2457
 # t/content-model-atom-threading-1.dat
-not ok 2444
-# Test 2444 got: "/feed/entry/in-reply-to/@type;IMT:subtype;unsupported\n/feed/entry/link/@type;IMT:subtype;unsupported\n/feed;element missing:atom|link|self;s" (t/ContentChecker.t at line 99 fail #2444)
+not ok 2458
+# Test 2458 got: "/feed/entry/in-reply-to/@type;IMT:subtype;unsupported\n/feed/entry/link/@type;IMT:subtype;unsupported\n/feed;element missing:atom|link|self;s" (t/ContentChecker.t at line 99 fail #2458)
 #      Expected: "/feed;element missing:atom|link|self;s" (<!-- From RFC 4685 -->
 #   <feed xmlns="http://www.w3.org/2005/Atom"
 #         xmlns:thr="http://purl.org/syndication/thread/1.0">
@@ -2636,8 +2650,8 @@ not ok 2444
 #       <summary>This is a response to the original entry</summary>
 #     </entry>
 #   </feed>)
-not ok 2445
-# Test 2445 got: "/feed/entry/in-reply-to/@type;IMT:subtype;unsupported\n/feed/entry/link/@type;IMT:subtype;unsupported\n/feed;element missing:atom|link|self;s" (t/ContentChecker.t at line 99 fail #2445)
+not ok 2459
+# Test 2459 got: "/feed/entry/in-reply-to/@type;IMT:subtype;unsupported\n/feed/entry/link/@type;IMT:subtype;unsupported\n/feed;element missing:atom|link|self;s" (t/ContentChecker.t at line 99 fail #2459)
 #      Expected: "/feed;element missing:atom|link|self;s" (<!-- From RFC 4685 -->
 #   <feed xmlns="http://www.w3.org/2005/Atom"
 #         xmlns:thr="http://purl.org/syndication/thread/1.0">
@@ -2663,17 +2677,17 @@ not ok 2445
 #       <summary>This is a response to the original entry</summary>
 #     </entry>
 #   </feed>)
-ok 2446
-ok 2447
-ok 2448
-ok 2449
-ok 2450
-ok 2451
-ok 2452
-ok 2453
-ok 2454
-ok 2455
-ok 2456
-ok 2457
-ok 2458
-ok 2459
+ok 2460
+ok 2461
+ok 2462
+ok 2463
+ok 2464
+ok 2465
+ok 2466
+ok 2467
+ok 2468
+ok 2469
+ok 2470
+ok 2471
+ok 2472
+ok 2473
