@@ -1,7 +1,7 @@
 1..1068
 # Running under perl version 5.008007 for linux
-# Current time local: Sat May 10 14:59:18 2008
-# Current time GMT:   Sat May 10 05:59:18 2008
+# Current time local: Fri May 16 19:49:27 2008
+# Current time GMT:   Fri May 16 10:49:27 2008
 # Using Test.pm version 1.25
 # t/tokenizer/test1.test
 ok 1
