@@ -1,7 +1,7 @@
 1..1920
 # Running under perl version 5.008007 for linux
-# Current time local: Sat May 10 14:59:37 2008
-# Current time GMT:   Sat May 10 05:59:37 2008
+# Current time local: Fri May 16 19:49:47 2008
+# Current time GMT:   Fri May 16 10:49:47 2008
 # Using Test.pm version 1.25
 # t/tokenizer-test-2.dat
 ok 1
