@@ -1,3 +1,8 @@
+2008-05-16  Wakaba  <wakaba@suika.fam.cx>
+
+	* content-model-2.dat: Test data for pixeldata="" attribute
+	are added (HTML5 revision 1629).
+
 2008-05-10  Wakaba  <wakaba@suika.fam.cx>
 
 	* content-model-2.dat: Boolean attributes now allow uppercase
