@@ -1,3 +1,11 @@
+2008-05-16  Wakaba  <wakaba@suika.fam.cx>
+
+	* HTML.pm ($GetHTMLFloatingPointNumberAttrChecker): More than
+	one "." characters were allowed in a floating point number
+	incorrectly.
+	(source): Support for the pixelratio="" attribute (HTML5 revision
+	1629).
+
 2008-05-10  Wakaba  <wakaba@suika.fam.cx>
 
 	* HTML.pm: Yay, |canvas| got the final status!
